[gd_scene load_steps=13 format=3 uid="uid://dg8ajkwrr827t"]

[ext_resource type="Script" path="res://game/actors/characters/generic_characters/rat/rat.gd" id="1_0375t"]
[ext_resource type="PackedScene" uid="uid://cifk22xcl2onq" path="res://game/assets/animations/18_rat/anim0/anim0.tscn" id="2_c0jy7"]
[ext_resource type="PackedScene" uid="uid://bs8ffc1gdcw2o" path="res://game/assets/animations/18_rat/anim1/anim1.tscn" id="3_75xd1"]
[ext_resource type="Script" path="res://game/components/health_system/health_system.gd" id="4_55r05"]
[ext_resource type="PackedScene" uid="uid://dyxrwqu7ldqb5" path="res://game/assets/animations/18_rat/anim2/anim2.tscn" id="4_bpen0"]
[ext_resource type="Script" path="res://game/actors/characters/generic_characters/opponent_logic/opponent.gd" id="5_0nb28"]
[ext_resource type="PackedScene" uid="uid://qmohs8nwe8v4" path="res://game/assets/animations/18_rat/anim3/anim3.tscn" id="5_b7pfo"]
[ext_resource type="Script" path="res://game/components/movement_system/movement_system.gd" id="5_yslbp"]
[ext_resource type="Script" path="res://game/components/paint_red/paint_red.gd" id="9_kn3nq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_y3n38"]
size = Vector3(1.38733, 1.66528, 2.16151)

[sub_resource type="Animation" id="Animation_udyfn"]
resource_name = "ded"
length = 4.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3jmyr"]
_data = {
"ded": SubResource("Animation_udyfn")
}

[node name="Rat" type="CharacterBody3D" groups=["opponents"]]
script = ExtResource("1_0375t")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0125122, 0.811401, 0.190956)
shape = SubResource("BoxShape3D_y3n38")

[node name="idle" parent="." instance=ExtResource("2_c0jy7")]

[node name="walk" parent="." instance=ExtResource("3_75xd1")]

[node name="attack" parent="." instance=ExtResource("4_bpen0")]

[node name="death" parent="." instance=ExtResource("5_b7pfo")]

[node name="queue_free_timer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3jmyr")
}

[node name="health_system" type="Node" parent="."]
script = ExtResource("4_55r05")

[node name="movement_system" type="Node" parent="."]
script = ExtResource("5_yslbp")
SPEED = 1.0

[node name="is_opponent" type="Node" parent="." groups=["opponents"]]
script = ExtResource("5_0nb28")

[node name="paint_red" type="Node" parent="."]
script = ExtResource("9_kn3nq")
material_path = "res://game/actors/characters/generic_characters/rat/red_rat_material.tres"

[connection signal="health_depleted" from="health_system" to="." method="_on_health_system_health_depleted"]
